# Shoujiki

./: .gitignore  LICENSE  README.md  TODO.md  docker-compose.yml  render.yaml
app/: main.py
app/modules/agents/: routes.py  validation.py
app/modules/billing/: service.py
app/schemas/: agent.py
apps/api/: .env.example  Dockerfile  main.py  requirements.txt
apps/api/core/: agent_policy.json  config.py  dependencies.py  security.py  tasks.py
apps/api/db/: migrations.py  session.py
apps/api/db/models/: models.py
apps/api/modules/agents/: routes.py  service.py  validation.py
apps/api/schemas/: agent.py  auth.py  billing.py  marketplace.py  task.py  workflow.py
apps/api/tests/: test_agent.py
apps/contract/: Anchor.toml  Dockerfile
apps/contract/programs/shoujiki_escrow/: Cargo.toml
apps/contract/programs/shoujiki_escrow/src/: lib.rs
apps/sandbox/: Dockerfile  app.py  requirements.txt  runner.py
apps/web/: .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  proxy.ts  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: WalletProvider.tsx
apps/web/hooks/: useWalletAuth.ts
apps/web/lib/: api.ts  solana.ts  utils.ts
deploy/mono/: Dockerfile  supervisord.conf
deploy/render-backend/: Dockerfile  supervisor.conf  supervisord.conf
docs/: SRS.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: page.tsx
frontend/components/: WalletProvider.tsx
frontend/lib/: api.ts
programs/shoujiki-escrow/src/: lib.rs
sandbox/: runner.py
(+55 files in other folders)
